2006-02-07  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* configure.ac, README, AUTHORS: Last updates, tagged and
	published as Herwig++-2.0-beta release. Merged release branch into
	main up until tag herwig-2-0-beta
	
2006-02-03  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* MatrixElement/MEqq2W2ll.cc: Bugfix for unititialized
	variable. Solves imbalance between W+ and W-.

2006-02-02  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* Shower/ShowerHandler.cc, Hadronization/PartonSplitter.cc: Added
	eventerror for spacelike gluons in PartonSplitter. Added check for
	QCD-FSR when doing ME corrections.

2006-02-01  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* all: Branched off herwig-2-0-beta-release branch, then merged
	Decay Radiation branch. Structural changes to decayers. 

	* Utilities/Math.cc, Decay/Perturbative/SMTopDecayer.h,
	SMHiggsGGHiggsPPDecayer.h, SMHiggsFermionsDecayer.h: Temporary
	fixes to allow compilation.


2006-01-31  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* src/Shower.in, Shower/SplittingFunctions: Individual PDFMax
	limits for efficiency.

	* Decay/HwDecayHandler.cc: Added vertex setting to handle displaced
	vertices. 
	
2006-01-26  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* MatrixElements/*: New qq->W->ll and ee->gZ->qq matrix
	elements. Replaced default qq->gZ->ll
	
	* src/Analysis.in, Analysis/SimpleLHCAnalysis.*,
	Analysis/Histogram.*, Analysis/BasicConsistency.*: Added
	SimpleLHCAnalysis, cleaned up Histogram class and BasicConsistency
	analysis.

	* src/Shower.in, Shower/PartnerFinder.cc,
	Shower/KinematicsReconstructor.cc, Shower/Evolver.cc,
	Shower/BackwardEvolver.cc: fixed ISR/FSR crash for LHC. This is
	NOT a permanent solution, there is no timelike showering of ISR
	particles at the moment! 

2006-01-24 David Grellscheid <David.Grellscheid@durham.ac.uk>

	* PDF/MRST.cc: Restructured for speed, high-x problem unchanged
	